Bug 467452 - KDevelop XDebug Support cannot be built because duchain/safetycounter.h is missing
Summary: KDevelop XDebug Support cannot be built because duchain/safetycounter.h is mi...
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: language (other bugs)
Version First Reported In: git master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-16 17:11 UTC by Claudius
Modified: 2023-03-17 10:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudius 2023-03-16 17:11:57 UTC
SUMMARY

language/duchain/safetycounter.h
seems to have been removed from kdevplatform.

I use version kdevelop 22.12.3-1 from the archlinux repo

STEPS TO REPRODUCE
1. get https://invent.kde.org/kdevelop/kdev-xdebug
2. cmake and build

OBSERVED RESULT
kdev-xdebug/stringhelpers.cpp:20:10: fatal error: language/duchain/safetycounter.h: No such file or directory
   20 | #include <language/duchain/safetycounter.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/kdevxdebug.dir/build.make:234: CMakeFiles/kdevxdebug.dir/stringhelpers.cpp.o] Error 1


Is this a bug or should I manually grab an older version of kdevplatform?
Comment 1 Claudius 2023-03-16 17:14:32 UTC
If I just comment out the include file. The Plugin builds fine.
Comment 2 Igor Kushnir 2023-03-17 08:57:31 UTC
Sorry, I haven't noticed this use while removing the header. I will fix this bug soon.
Comment 3 Igor Kushnir 2023-03-17 10:16:54 UTC
Git commit 5ed75d2390a75681af9108b4100bf5db74cee091 by Igor Kushnir.
Committed on 17/03/2023 at 10:09.
Pushed by igorkushnir into branch 'master'.

Remove no longer available unused safetycounter.h include

kdevplatform/language/duchain/safetycounter.h was recently removed in
https://commits.kde.org/kdevelop/kdevelop/b4eeba21c1d88903fca84642153ae087e129b4a0

The include of the removed header in this plugin was missed. Simply
remove it now, because neither the single declaration in the removed
header `struct SafetyCounter` nor the single include <QDebug> is used
in the affected source file kdev-xdebug/stringhelpers.cpp.

M  +0    -1    stringhelpers.cpp

https://invent.kde.org/kdevelop/kdev-xdebug/commit/5ed75d2390a75681af9108b4100bf5db74cee091